# OperSystems

./: CMakeLists.txt
lab1/: hello_dyn_runtime  hello_dynamic  hello_static  main.c
lab2/: hello.c  hello_syscall  hello_syscall.c  hello_write  hello_write.c
lab3/part1/: build.sh  reverse_directory.c
lab3/part1/test_directory/: test1
lab3/part2/: clear.sh  controlDirectorys.c  poligon  sdfsdf  sl
lab3/part2/test_directory/: test3
lab3/part3/: printPID  printPID.c
lab4/part1/: .swn  .swp  main  main.c
lab4/part2/: first  first.c  second  second.c
lab5/part1/: main.c
lab5/part2/: main.c
lab6/part1/: main.c
lab6/part2/: main.c
