cmake_minimum_required(VERSION 3.27)
project(OperSystems)

set(CMAKE_CXX_STANDARD 17)

add_executable(OperSystems
#        lab2/hello.c
#        lab2/hello_syscall.c
#        lab2/hello_write.c
#        lab3/reverse_directory.c
#        lab3/part2/controlDirectorys.c
#        lab4/part1/main.c
#        lab4/part2/first.c
#        lab4/part2/second.c
        lab5/part1/main.c
        lab5/part2/main.c
        lab6/part1/main.c
        #        lab3/part3/printPID.c
        #        lab3/sdfsdf.cpp
)
